k8s/stateful-app.yaml
apiVersion: apps/v1

kind: StatefulSet

metadata:
  name: stateful-app
  namespace: stateful-demo

spec:
  serviceName: headless-service

  replicas: 3

  selector:
    matchLabels:
      app: stateful-app

  template:
    metadata:
      labels:
        app: stateful-app

    spec:
      containers:
        - name: stateful-app
          image: backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cache
              mountPath: /cache

  volumeClaimTemplates:
    - metadata:
        name: cache

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
